First draft of the sound match game

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="dummy_button"> </string>
     <string name="dummy_content"> </string>
+
+    <string name="title_activity_practice">Practice</string>
+
+    <string name="title_activity_soundmatch">soundmatch</string>
 </resources>
