--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
+    <!-- General app info -->
     <string name="app_name">HeartBeat</string>
-
     <string name="dummy_button"> </string>
     <string name="dummy_content"> </string>
+
+    <!-- Action bar menu items -->
+    <string name="action_settings">Settings</string>
+    <string name="action_exit">Exit</string>
+    <string name="title_activity_learn">LearnActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_practice">PracticeActivity</string>
 </resources>
