--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,10 @@
     <string name="title_activity_learn_activity_mitral_regurgitation">
         LearnActivityMitralRegurgitation
     </string>
-
-
+    <string name="score_name_1">Speed</string>
+    <string name="score_name_2">Accuracy</string>
+    <string name="score_name_3">Mitral Valve</string>
+    <string name="score_name_4">Aortic Valve</string>
+    <string name="score_name_5">Pulmonary Valve</string>
+    <string name="score_name_6">Tricuspid Valve</string>
 </resources>
