Irene: Committing prelim merging of game. Part 3.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_beat">BeatActivity</string>
+    <string name="title_activity_game1">Game1</string>
 </resources>
